  necessary qTip library.
#1844338 by willvincent, DamienMcKenna: Workaround for older versions of PHP
  that don't have the array_replace_recursive function.
#1148956 by DamienMcKenna, lussoluca: Support for qTip's position 'adjust'
  settings.
#1148956 by DamienMcKenna: Due to problems with qTip, both 'adjust' values
  must be non-zero in order for them to work.


Menu_MiniPanels 6.x-1.3-rc9, 2012-11-13
---------------------------------------
#1718012 by DamienMcKenna: Optional style setting fields were required; also
  reorganized the style settings fieldset for a slight UX improvement.
#1699648 by smartinm: Logic for excluding certain pages wasn't being ran so
  qTip was always loaded.
#1775482 by DamienMcKenna: Position Type selections are incorrect.
#1218174 by DamienMcKenna: Allow the position container to be changed.
#1837178 by DamienMcKenna: Corrected the Mini Panels admin link.
#1810496 by DamienMcKenna: If the 'container' value is empty, don't output it.
#1812500 by DamienMcKenna: Accidentally broke output in #1633136 by using a
  function that only exists in the D7 version; fixed it by renaming the D6
  function for consistency.
#1805648 by DamienMcKenna: Ensure all defaults are available, in case they
  are accidentally removed via hook_menu_minipanels_defaults_alter().


Menu_MiniPanels 6.x-1.3-rc8, 2012-08-21
---------------------------------------
#1580312 by DamienMcKenna: Makes the $var JS variable naming consistent.
#1661730 by DamienMcKenna: Replaced $.each with for() loop (minor performance
  improvement).
#1683872 by DamienMcKenna: Fixed callbacks, they were broken by the changes in
  #1661730.
#1633136 by DamienMcKenna: If the primary and secondary menus are the same,
  also process the second level of that menu.
#1728018 by DamienMcKenna: Restructured the output generation so it happens
  earlier in the page cycle to help avoid problems with other modules.


Menu_MiniPanels 6.x-1.3-rc7, 2012-06-17
---------------------------------------