@@ -73,25 +73,6 @@ Drupal.behaviors.menuMiniPanels = function(context) {
         $(this).qtip(setting);
       });
   }
-
-  // Mark target element as selected.
-  MenuMiniPanels.setCallback('beforeShow', function(qTip, event, content) {
-    // Forceably remove the class off all DOM elements, avoid problems
-    // of it not being properly removed in certain scenarios.
-    $('.qtip-hover').removeClass('qtip-hover');
-
-    // Add the hover class to the current item.
-    var $target = $(qTip.elements.target.get(0));
-    if ($target !== undefined) {
-      $target.addClass('qtip-hover');
-    }
-  });
-
-  // Unmark target element as selected.
-  MenuMiniPanels.setCallback('beforeHide', function(qTip, event, content) {
-    // Remove the class off all DOM elements.
-    $('.qtip-hover').removeClass('qtip-hover');
-  });
 };
 
 
